--- a/front/recommend.kv
+++ b/front/recommend.kv
@@ -1,18 +1,140 @@
 #:kivy 1.0.9
 
+<WindowManager>:
+    id: screen_manager
+    Welcome:
+    ChoosePerson:
+    ChooseRecommendationMethod:
+    LoadingScreen:
+    RecommendedProducts:
+
+
 <Welcome>:
+    name: "welcome"
 
-    Label:
-        font_size: 70
-        center_x: root.width / 2
-        top: root.height - 400
-        text: "Witaj w aplikacji RecommendPy!"
+    AnchorLayout:
+        Label:
+            font_size: 70
+            anchor_x: "center"
+            anchor_y: "top"
+            text: "Witaj w aplikacji RecommendPy!"
 
-    Button:
-        text: "Zaczynamy"
-        on_release: root.button_pressed()
-        center_x: root.width / 2
-        top: root.height / 2
-        size_hint: None, None
-        size: self.texture_size[0] + dp(40), self.texture_size[1] + dp(30)
-        background_color: (0, 0.7, 0.3, 1)
+        Button:
+            text: "Zaczynamy"
+            on_release: app.root.current = "choose"
+            anchor_x: "center"
+            anchor_y: "center"
+            size_hint: None, None
+            size: self.texture_size[0] + dp(40), self.texture_size[1] + dp(30)
+            background_color: (0, 0.7, 0.3, 1)
+
+<ChoosePerson>:
+    name: "choose"
+
+    AnchorLayout:
+        Label:
+            font_size: 50
+            anchor_x: "top"
+            anchor_y: "center"
+            text: "Wybierz osobę, której chcesz zarekomendować produkty"
+
+        Button:
+            text: "Potwierdź"
+            on_release: app.root.current = "recommend"
+            anchor_x: "center"
+            anchor_y: "bottom"
+            size_hint: None, None
+            size: self.texture_size[0] + dp(40), self.texture_size[1] + dp(30)
+            background_color: (0, 0.7, 0.3, 1)
+
+        Button:
+            text: "Wróć"
+            on_release: app.root.current = "welcome"
+            anchor_x: "left"
+            anchor_y: "top"
+            size_hint: None, None
+            size: self.texture_size[0] + dp(40), self.texture_size[1] + dp(30)
+            background_color: (0, 0.7, 0.3, 1)
+
+<ChooseRecommendationMethod>:
+    name: "recommend"
+
+    AnchorLayout:
+        Label:
+            font_size: 50
+            anchor_x: "top"
+            anchor_y: "center"
+            text: "Wybierz osobę, której chcesz zarekomendować produkty"
+
+        Button:
+            text: "Podobieństwo między produktami"
+            on_release: app.root.current = "load"
+            anchor_x: "center"
+            anchor_y: "center"
+            size_hint: None, None
+            size: self.texture_size[0] + dp(40), self.texture_size[1] + dp(30)
+            background_color: (0, 0.7, 0.3, 1)
+
+        Button
+            text: "Podobieństwo między osobami"
+            on_release: app.root.current = "load"
+            anchor_x: "center"
+            anchor_y: "bottom"
+            size_hint: None, None
+            size: self.texture_size[0] + dp(40), self.texture_size[1] + dp(30)
+            background_color: (0, 0.7, 0.3, 1)
+
+        Button:
+            text: "Wróć"
+            on_release: app.root.current = "choose"
+            anchor_x: "left"
+            anchor_y: "top"
+            size_hint: None, None
+            size: self.texture_size[0] + dp(40), self.texture_size[1] + dp(30)
+            background_color: (0, 0.7, 0.3, 1)
+
+<LoadingScreen>:
+    name: "load"
+
+    BoxLayout:
+        orientation: 'vertical'
+        padding: dp(20)
+
+        ProgressBar:
+            id: loading_bar
+            max: 100
+            value: 0
+            size_hint: 1, 0.1
+
+        Button:
+            text: 'Start Loading'
+            size_hint: 1, 0.2
+            on_release: root.start_loading()
+
+<RecommendedProducts>:
+    name: "recommended"
+
+    AnchorLayout:
+        Label:
+            font_size: 50
+            anchor_x: "top"
+            anchor_y: "center"
+            text: "Zarekomendowane produkty"
+
+        Button:
+            text: "Zamknij"
+            on_release: app.stop()
+            anchor_x: "left"
+            anchor_y: "bottom"
+            size_hint: None, None
+            size: self.texture_size[0] + dp(40), self.texture_size[1] + dp(30)
+            background_color: (0, 0.7, 0.3, 1)
+
+        Button:
+            text: "Menu główne"
+            on_release: app.root.current = "choose"
+            anchor_x: "right"
+            anchor_y: "bottom"
+            size_hint: None, None
+            size: self.texture_size[0] + dp(40), self.texture_size[1] + dp(30)
+            background_color: (0, 0.7, 0.3, 1)
