--- a/front/recommend.kv
+++ b/front/recommend.kv
@@ -14,6 +14,7 @@
 
     BoxLayout:
         orientation: "vertical"
+        size: root.width, root.height
 
         Label:
             font_size: 70
@@ -33,6 +34,7 @@
 
     BoxLayout:
         orientation: "vertical"
+        size: root.width, root.height
 
         Label:
             font_size: 50
@@ -61,6 +63,7 @@
 
     BoxLayout:
         orientation: "vertical"
+        size: root.width, root.height
 
         Label:
             font_size: 50
@@ -97,13 +100,19 @@
 
     BoxLayout:
         orientation: 'vertical'
+        size: root.width, root.height
 
         Label:
             font_size: 50
             size_hint: 1, 0.5
             text: "Rozpocznij rekomendacje"
 
-        #tutaj progressBar
+        ProgressBar:
+            id: prg_bar
+            min: 0
+            max: 1
+            size_hint_x: .8
+            pos_hint: {'x':.1}
 
         FloatLayout:
 
@@ -126,6 +135,7 @@
 
     BoxLayout:
         orientation: "vertical"
+        size: root.width, root.height
 
         Label:
             font_size: 50
