Added example function to progressBar - bugged

--- a/front/recommend.kv
+++ b/front/recommend.kv
@@ -103,9 +103,10 @@
         size: root.width, root.height
 
         Label:
+            id: prg_lab
             font_size: 50
             size_hint: 1, 0.5
-            text: "Rozpocznij rekomendacje"
+            text: "0% progress"
 
         ProgressBar:
             id: prg_bar
