--- a/front/recommend.kv
+++ b/front/recommend.kv
@@ -125,6 +125,7 @@
                 on_release: app.root.current = "recommend"
 
             Button:
+                id: start_recommend
                 text: 'Rozpocznij rekomendacje'
                 size_hint: .3, .2
                 pos_hint: {'center_x':.8, 'center_y': .2}
@@ -133,6 +134,7 @@
 
 <RecommendedProducts>:
     name: "recommended"
+    id: recommended
 
     BoxLayout:
         orientation: "vertical"
