--- a/front/recommend.kv
+++ b/front/recommend.kv
@@ -41,7 +41,32 @@
             size_hint: 1, 0.5
             text: "Wybierz osobę, której chcesz zarekomendować produkty"
 
-        #Tutaj slider (to jeszcze zrobie ;))
+        BoxLayout:
+            orientation: "horizontal"
+            size: root.width, root.height / 2
+
+            FloatLayout:
+
+                Button:
+                    text: '<'
+                    size_hint: .1, .4
+                    pos_hint: {'center_x':.1, 'center_y': .2}
+
+                Widget:
+                    size_hint: .6, .8
+                    pos_hint: {'center_x':.5, 'center_y': .2}
+
+                    canvas:
+                        Color:
+                            rgba: 1, 0, 0, 1
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+
+                Button:
+                    text: '>'
+                    size_hint: .1, .4
+                    pos_hint: {'center_x':.9, 'center_y': .2}
 
         FloatLayout:
             Button:
@@ -150,7 +175,7 @@
         FloatLayout:
 
             Button:
-                text: "Menu główne"
+                text: "Menu główne" #tutaj trzeba wykombinowac sposob aby zresetowac aplikacje
                 on_release: app.root.current = "choose"
                 size_hint: .3, .2
                 pos_hint: {'center_x':.2, 'center_y': .2}
