Finished loading screen and recommended products screen, still need to fix reset button and work on progress bar (make it more thick - IDK if that's possible)

--- a/front/recommend.kv
+++ b/front/recommend.kv
@@ -183,34 +183,52 @@
     BoxLayout:
         orientation: 'vertical'
 
-        Label:
-            id: prg_lab
-            font_size: 50
-            size_hint: 1, 0.5
-            text: "0% progress"
+        canvas.before:
+            Rectangle:
+                pos: self.pos
+                size: self.size
+                source: 'images/background.png'
 
-        ProgressBar:
-            id: prg_bar
-            min: 0
-            max: 1
-            size_hint_x: .8
-            pos_hint: {'x':.1}
+        BoxLayout:
+            orientation: "vertical"
 
-        FloatLayout:
-            Button:
-                text: "Wróć"
-                size_hint: .3, .2
-                pos_hint: {'center_x':.2, 'center_y': .2}
-                background_color: (0, 0.7, 0.3, 1)
-                on_release: app.root.current = "recommend"
+            canvas.before:
+                Color:
+                    rgba: 1,1,1,.6
+                RoundedRectangle:
+                    pos: 50, 50
+                    size: (root.width-100, root.height-100)
+                    radius: [10]
 
-            Button:
-                id: start_recommend
-                text: 'Rozpocznij rekomendacje'
-                size_hint: .3, .2
-                pos_hint: {'center_x':.8, 'center_y': .2}
-                background_color: (0, 0.7, 0.3, 1)
-                on_release: root.start_loading()
+            Label:
+                id: prg_lab
+                font_size: self.width / 20
+                size_hint: 1, 0.5
+                text: "0% progress"
+                color: 0, 0, 0
+
+            ProgressBar:
+                id: prg_bar
+                min: 0
+                max: 1
+                size_hint_x: .8
+                pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+
+            FloatLayout:
+                RoundedButton:
+                    text: "Wróć"
+                    size_hint: .3, .2
+                    pos_hint: {'center_x':.2, 'center_y': .3}
+                    font_size: self.width / 13
+                    on_release: app.root.current = "recommend"
+
+                RoundedButton:
+                    id: start_recommend
+                    text: 'Rozpocznij rekomendacje'
+                    size_hint: .3, .2
+                    pos_hint: {'center_x':.8, 'center_y': .3}
+                    font_size: self.width / 13
+                    on_release: root.start_loading()
 
 <RecommendedProducts>:
     name: "recommended"
@@ -219,47 +237,52 @@
     BoxLayout:
         orientation: "vertical"
 
+        canvas.before:
+            Rectangle:
+                pos: self.pos
+                size: self.size
+                source: 'images/background.png'
+
         Label:
-            font_size: 50
+            font_size: self.width / 20
             size_hint: 1, 0.5
             text: "Zarekomendowane produkty"
+            color: 0, 0, 0
 
         BoxLayout:
             orientation: "horizontal"
 
             FloatLayout:
-                Button:
+                ArrowButton:
                     text: '<'
                     size_hint: .1, .4
                     pos_hint: {'center_x':.1, 'center_y': .2}
 
                 Widget:
-                    size_hint: .6, .8
+                    size_hint: .6, 1.2
                     pos_hint: {'center_x':.5, 'center_y': .2}
 
                     canvas:
                         Color:
-                            rgba: 1, 0, 0, 1
+                            rgba: 1,1,1,.6
                         Rectangle:
                             pos: self.pos
                             size: self.size
 
-                Button:
+                ArrowButton:
                     text: '>'
                     size_hint: .1, .4
                     pos_hint: {'center_x':.9, 'center_y': .2}
 
         FloatLayout:
-            Button:
+            RoundedButton:
                 text: "Menu główne"
                 on_release: app.reset_app()
                 size_hint: .3, .2
                 pos_hint: {'center_x':.2, 'center_y': .2}
-                background_color: (0, 0.7, 0.3, 1)
 
-            Button:
+            RoundedButton:
                 text: "Zamknij"
                 on_release: app.stop()
                 size_hint: .3, .2
                 pos_hint: {'center_x':.8, 'center_y': .2}
-                background_color: (0, 0.7, 0.3, 1)
