--- a/front/recommend.kv
+++ b/front/recommend.kv
@@ -51,7 +51,7 @@
 
             canvas.before:
                 Color:
-                    rgba: 1,1,1,.6
+                    rgba: 1,1,1,.5
                 RoundedRectangle:
                     pos: 50, 50
                     size: (root.width-100, root.height-100)
@@ -241,7 +241,7 @@
                     size_hint: .3, .2
                     pos_hint: {'center_x':.8, 'center_y': .3}
                     font_size: self.width / 13
-                    on_release: root.start_loading()
+                    on_press: root.start_loading()
 
 <RecommendedProducts>:
     name: "recommended"
@@ -303,7 +303,7 @@
         FloatLayout:
             RoundedButton:
                 text: "Menu główne"
-                on_release: app.reset_app()
+                on_press: root.switch_to_first_screen(self)
                 size_hint: .3, .2
                 pos_hint: {'center_x':.2, 'center_y': .2}
 
