Managing windows problem resolved

--- a/front/recommend.kv
+++ b/front/recommend.kv
@@ -294,7 +294,7 @@
         FloatLayout:
             RoundedButton:
                 text: "Menu główne"
-                on_press: root.switch_to_first_screen(self)
+                on_press: root.switch_to_first_screen()
                 size_hint: .3, .2
                 pos_hint: {'center_x':.2, 'center_y': .2}
 
