--- a/front/recommend.kv
+++ b/front/recommend.kv
@@ -105,6 +105,14 @@
                     size_hint: .6, 1.2
                     pos_hint: {'center_x':.5, 'center_y': .2}
 
+                    canvas.before:
+                        Color:
+                            rgba: 1,1,1,.5
+                        RoundedRectangle:
+                            pos: self.pos
+                            size: self.size
+                            radius: [10]
+
                 ArrowButton:
                     id: right
                     text: '>'
